proposta-svc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: apolice-svc
  template:
    metadata:
      labels:
        app: apolice-svc
    spec:
      containers:
        - name: apolice-svc-container
          image: israelsz13/proposta-svc:0.1
          ports:
            - containerPort: 8080
              name: porta-http

            - containerPort: 8081
              name: porta-https
