proposta-svc/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proposta-svc-ing
  namespace: microsservices-ns
  annotations:
    konghq.com/plugins: rate-limit-5-min

  labels:
    app.kubernetes.io/name: myingress
    
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/propostas
            backend:
              service:
                name: proposta-svc
                port:
                  number: 8080
